tests/schemas/error/003_missing_struct_identifier.fcp
version: "3"

struct {
    field1 @0: u8,
}
